# semeval

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: deberta_multitask.yaml  deberta_v3_base.yaml  deberta_v3_base_no_weights.yaml  deberta_v3_large.yaml  deberta_v3_large_a100.yaml  deberta_v3_large_seed43.yaml  deberta_v3_large_seed44.yaml  roberta_base.yaml
docs/: apple_silicon.md  architecture.md  colab.md  data_format.md  evaluation.md  training.md
notebooks/: train_colab.ipynb  train_colab.py
scripts/: prepare_data.sh  run_ensemble.sh  run_predict.sh  run_train_deberta.sh  run_train_deberta_large.sh  run_train_large_seed42.sh  run_train_large_seed43.sh  run_train_large_seed44.sh  run_train_roberta.sh
src/clarity/: __init__.py  __main__.py  data.py  ensemble.py  eval.py  labels.py  models.py  predict.py  train.py  utils.py
tests/: test_ensemble.py  test_eval_multiannotator.py  test_label_mapping.py  test_text_construction.py
